--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#0a0a0f",
   "theme_color": "#FFAA00",
   "icons": [
-    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/logo-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/logo-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
