--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,15 @@
 {
-  "name": "L'Incubateur ECS — PULSE",
-  "short_name": "Incubateur",
+  "name": "L'Incubateur ECS — Scale Corp",
+  "short_name": "Scale Corp",
+  "description": "Dashboard de gestion pour L'Écosystème — Sociétés, Finances, Sales, CRM",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#030308",
   "theme_color": "#FFAA00",
-  "icons": [{"src": "/logo-ecs.png", "sizes": "192x192", "type": "image/png"}, {"src": "/logo-ecs.png", "sizes": "512x512", "type": "image/png"}]
+  "categories": ["business", "finance"],
+  "icons": [
+    {"src": "/logo-ecs.png", "sizes": "192x192", "type": "image/png", "purpose": "any"},
+    {"src": "/logo-ecs.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable"}
+  ]
 }
