--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "recharts": "^2.12.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.4.0"
   }
